<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        app:layout_constraintLeft_toLeftOf="@id/name_label"/>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:columnCount="3"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_column="0"
            android:textSize="16sp"
            android:text="@string/age" />

        <TextView
            android:layout_column="1"
            android:textSize="16sp"
            android:text="@string/weight" />

        <TextView
            android:layout_column="2"
            android:textSize="16sp"
            android:text="@string/height" />

        <!-- Inputs -->
        <EditText
            android:id="@+id/age_input"
            android:layout_column="0"
            android:layout_row="1"
            android:inputType="number"
            android:hint="Idade" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_column="1"
            android:layout_row="1"
            android:inputType="numberDecimal"
            android:hint="Peso" />

        <EditText
            android:id="@+id/height_input"
            android:layout_column="2"
            android:layout_row="1"
            android:inputType="numberDecimal"
            android:hint="Altura" />
    </GridLayout>

    <!-- Botão -->
    <Button
        android:id="@+id/report_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:layout_marginTop="24dp"
        android:onClick="generateReport"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>